# grimley-browser

./: Cargo.toml  README.md
src/: lib.rs  main.rs  testing.rs
src/app/: constants.rs  controller.rs  escape.rs  events.rs  history.rs  mod.rs  pages.rs  pdf.rs  state.rs  tabs.rs  ui_protocol.rs  ui_sync.rs
src/app/templates/: new_tab.html  pdf_workspace.html
src/browser/: action.rs  content.rs  layout.rs  mod.rs  toolbar.rs  url.rs
src/browser/webview/: content.rs  mod.rs  protocol.rs  toolbar.rs
src/internal_pages/: history.rs  mod.rs  new_tab.rs  renderer.rs  shield.rs
src/pdf/: annotations.rs  editor.rs  export.rs  fetch.rs  mod.rs  model.rs  workspace.rs
src/pdf/templates/: pdf_workspace.html
src/shield/: diagnostics.rs  engine.rs  mod.rs  request.rs  rules.rs
src/storage/: annotations.rs  history.rs  mod.rs  session.rs  settings.rs
src/tabs/: history.rs  launch.rs  manager.rs  mod.rs  model.rs
src/ui/: mod.rs  window.rs
tests/: browser_flows.rs  scenarios.rs
