[package]
name = "grimley_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = "0.40"
tao = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
